# PiqueCrypto

docs/: Key.plantuml
include/: HashFunction.hpp  Key.hpp
test/: CMakeLists.txt  Test_Key.hpp  testsuite.cpp
